# Private_Music_Platform

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  uno.config.js  vite.config.js
backend/: .env.example  Cargo.toml
backend/migrations/: 001_init.sql  002_play_events.sql  003_add_play_events_duration.sql  004_add_play_events_duration_safe.sql  005_devices_extend.sql  006_add_user_id.sql  007_usage_stats_user_unique.sql  008_usage_stats_dedupe.sql  009_usage_stats_force_dedupe.sql
backend/src/: main.rs
src/: App.vue  main.js  page-transition.css  page-transition.js
src/composables/: useMusicState.js
src/pages/: DevicesPage.vue  HomePage.vue  LibraryPage.vue  PlaylistDetailPage.vue  PlaylistsPage.vue  SettingsPage.vue
src/router/: index.js
src/styles/: music.css
